Swagger tags added.
